<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- BaseActivity -->
	<string name="msgAllDataPurged">All Data Purged</string>
	<string name="titleToggleService">Toggle Service</string>
	<string name="titlePurge">Purge Data</string>
			
    <!-- StatusActivity -->
    <string name="app_name">Yamba</string>
    <string name="titleYamba">Yamba</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titleStatus">Status Update</string>
    <string name="buttonUpdate">Update</string>
    <string name="hintText">Please enter your 140-character status</string>
    
    <!-- PrefsActivity -->
    <string name="titlePrefs">Preferences</string>
    <string name="titleUsername">Username</string>
    <string name="summaryUsername">your username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">your password</string>
    <string name="titleApiRoot">API Root URL</string>
    <string name="summaryApiRoot">http://yamba.marakana.com/api</string>
    
    <!--  UpdaterSerivce -->
    <string name="titleServiceStart">Start</string>
    <string name="titleServiceStop">Stop</string>
    
    <!-- TimelineActivity -->
    <string name="titleTimeline">Timeline</string>
    <string name="msgSetupPrefs">insert username and password</string>
    <string name="send_timeline_notifications_permission_label"></string>
    <string name="send_timeline_notifications_permission_description"></string>
    <string name="receive_timeline_notifications_permission_label"></string>
    <string name="receive_timeline_notifications_permission_description"></string>
    <string name="msgLastTimelineUpdate">nothing</string>
</resources>